##Text encoding: utf-8

2006-11-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/chem3ddoc.cc: don't crash on invalid atoms, just remove them.

2006-11-15  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/filechooser.cc: choose the default mime type if the mime type
	can't be determined.
	* programs/crystal/application.cc: rewrote save as image code to make
	it consistent with 3d viewer and gchempaint.
	* programs/crystal/application.h: ditto.
	* programs/crystal/document.cc: ditto.
	* programs/crystal/document.h: ditto.
	* programs/crystal/window.cc: ditto.

2006-11-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/application.cc: add image mime types support.
	* gcu/application.h: ditto.
	* gcu/chem3ddoc.cc: use a c++ string instead of char* for filename in
	Chem3dDoc::OnExportVrml.
	* gcu/chem3ddoc.h: ditto.
	* gcu/filechooser.cc: add mime type to the combo box if no description
	is available.
	* gcu/glview.cc: use a c++ string instead of char* for filename in
	GLView::SaveAsImage.
	* gcu/glview.h: ditto.
	* programs/3d/application.cc: use new image mime type support in
	gcu::Application.

2006-11-13  Jean Bréfort  <jean.brefort@normalesup.org>
	* TODO: updated to current state.
	* gcu/chem3ddoc.cc: export vrml now works.
	* programs/3d/application.cc: add model/vrml to mime types for save
	as image.

2006-11-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/chem3ddoc.cc: started work on vrml export.
	* gcu/chem3ddoc.h: ditto.
	* gcu/glview.h: ditto.
	* programs/3d/application.cc: enhanced image export.
	* programs/crystal/application.cc: fix on emore instance of the
	vrml mime type.

2006-11-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/filechooser.cc: show mime type list even if an extra widget is
	added and detect mime type for non existant files.
	* gcu/gtkperiodic.c: (gtk_periodic_finalize): replace deprecated
	gtk_object_sink.
	* programs/3d/application.cc: initial support for image export.
	* programs/3d/application.h: ditto.